Editing Friends List n add link in names

--- a/1-Fundamentos/3-introducao-a-html-e-css/1-html-e-css-estruturas-de-paginas/exercise1/index.html
+++ b/1-Fundamentos/3-introducao-a-html-e-css/1-html-e-css-estruturas-de-paginas/exercise1/index.html
@@ -7,16 +7,15 @@
   <body>
     <h1 style="color: rgb(107, 17, 92)">Lista de Amizades</h1>
         <ul style="color: rgb(138, 31, 123)">
-            <li><strong><strong><a href="https://www.linkedin.com/in/juliorugolo/" style="color: rgb(40, 50, 77)" target="_blank">Julio Rugolo</a></strong></li>
-            <li><strong><strong><a href="https://www.linkedin.com/in/lucas-s-rosa-50829383/" style="color: rgb(40, 50, 77)" target="_blank">Lucas Rosa</a></strong></li>
-            <li><strong><strong><a href="https://www.linkedin.com/in/pedro-muller-guimar%C3%A3es-leite/"  style="color: rgb(40, 50, 77)" target="_blank">Pedro Muller</a></strong></li>
-            <li><strong><strong>Nathália Klein Schmidt</strong></li>
-            <li><strong><strong>Emilio Butzlaff</strong></li>
-            <li><strong><strong>Lari Toledo</strong></li>
-            <li><strong><strong>Maiara Morit</strong></li>
-            <li><strong><strong>Lyvia Boutin</strong></li>
-            <li><strong><strong>Rodrigo Rocha</strong></li>
-            <li><strong><strong>Matheus Bertazzo</strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/juliorugolo/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Julio Rugolo</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/lucas-s-rosa-50829383/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Lucas Rosa</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/pedro-muller-guimar%C3%A3es-leite/"  style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Pedro Muller</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/mwlite/in/nataliakschmidt" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Nathália Klein Schmidt</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/emilio-butzlaff/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Emilio Butzlaff</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/larissa-toledo-8a820a230/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Lari Toledo</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/maiara-morit-aba472195/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Maiara Morit</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/lyviaboutin/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Lyvia Boutin</a></strong></li>
+            <li><strong><strong><a href="https://www.linkedin.com/in/rodrigorocs/" style="color: rgb(40, 50, 77) ; text-decoration: none;" target="_blank">Rodrigo Rocha</a></strong></li>
         </ul>
         <br><br>
         
