duplicando a section da quadra

--- a/1-Fundamentos/4-introducao-a-javascript/ResumaoJs/index.html
+++ b/1-Fundamentos/4-introducao-a-javascript/ResumaoJs/index.html
@@ -21,9 +21,23 @@
     <section class="court" id="full-court">
       <div class="team-field">
         <div class="trhee-points-area">
-          
+          <div class="free-trows">
+            <div class="free-trows-circle">
+              
+            </div>
+          </div>
         </div>
       </div>
+      <div class="team-field rotate-position" id="">
+        <div class="trhee-points-area">
+          <div class="free-trows">
+            <div class="free-trows-circle">
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="all-shots"></div>
     </section>
   </main>
   
