--- a/1-Fundamentos/4-introducao-a-javascript/ResumaoJs/index.html
+++ b/1-Fundamentos/4-introducao-a-javascript/ResumaoJs/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BasketScout</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -40,6 +41,6 @@
       <div id="all-shots"></div>
     </section>
   </main>
-  
+  <script src="scripts.js"></script>
 </body>
 </html>
