feat: Manipulando atributos com DOM

--- a/1-Fundamentos/5-javascript-dom-eventos-webstorage/1-javascript-dom-e-seletores/exercicios/Seletores/index.html
+++ b/1-Fundamentos/5-javascript-dom-eventos-webstorage/1-javascript-dom-e-seletores/exercicios/Seletores/index.html
@@ -12,11 +12,11 @@
     </header>
 
     <section class="emergency-tasks">
-      <div>
-        <h3>Urgente e Importante</h3>
+      <div id="urgency">
+        <h3 id="urgencyImportant">Urgente e Importante</h3>
       </div>
-      <div>
-        <h3>Urgente e Não-Importante</h3>
+      <div id="onlyUrgency">
+        <h3 id="onlyUrgencyText">Urgente e Não-Importante</h3>
       </div>
     </section>
 
