feat: criando uma série de listas ordenadas e desordenadas e atribuindo estilos específicos a elas

--- a/1-Fundamentos/3-introducao-a-html-e-css/3-html-e-css-seletores-e-posicionamento/parafixar/classCombo&DecendentClass/index.html
+++ b/1-Fundamentos/3-introducao-a-html-e-css/3-html-e-css-seletores-e-posicionamento/parafixar/classCombo&DecendentClass/index.html
@@ -6,7 +6,7 @@
     <title>#GoTrybe</title>
   </head>
   <body>
-    <h1><em>Combinações e Classes Descendentes</em></h1>
+    <h1 class="italic-title"><em>Combinações e Classes Descendentes</em></h1>
     <br />
     <h3>Top 5 frases memoráveis:</h3>
     <ol>
@@ -18,28 +18,28 @@
     </ol>
     <h3>As maiores linguagens de programação:</h3>
     <ul>
-      <li>Python</li>
-      <li>Java</li>
-      <li>JavaScript</li>
-      <li>C#</li>
-      <li>C / C++</li>
+      <li class="python">Python</li>
+      <li class="java">Java</li>
+      <li class="js">JavaScript</li>
+      <li class="csharp">C#</li>
+      <li class="c">C / C++</li>
     </ul>
     <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
     <ul>
       <li>
-        <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
+        <a class="stack" href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
       </li>
       <li>
-        <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+        <a class="w3" href="https://www.w3schools.com/" target="_blank">W3Schools</a>
       </li>
       <li>
-        <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
+        <a class="mdn" href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
       </li>
       <li>
-        <a href="https://devdocs.io/" target="_blank">DevDocs</a>
+        <a class="devdocs" href="https://devdocs.io/" target="_blank">DevDocs</a>
       </li>
       <li>
-        <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
+        <a class="trybe" href="https://app.betrybe.com/" target="_blank">Trybe</a>
       </li>
     </ul>
   </body>
