feat: gabarito das funções

--- a/2-Front-end/1-intro-ao-frontend-e-javascript-assincrono/2-javascript-assincrono-promises-e-fetch/fixacao/index.html
+++ b/2-Front-end/1-intro-ao-frontend-e-javascript-assincrono/2-javascript-assincrono-promises-e-fetch/fixacao/index.html
@@ -32,7 +32,7 @@
       <p id="error-message" class="invisible"></p>
     </section>
   </section>
-  <script src="./src/index.js" type="module"></script>
+  <script src="./index.js" type="module"></script>
 </body>
 
 </html>
